--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,8 @@
         <h2>Who I work with...</h2>
         <a href="https://www.learningu.org">Learning Unlimited</a>
 
+        <h2>Recent Slides</h2>
+        <a href="https://docs.google.com/presentation/d/1d64JN_S4q6ACc2JAe8718_xCzdwrGz6-9BQRntJNdlQ/edit?usp=sharing">Reconstructing the Universe</a>
       </header>
 
       <section>
